Fuera de clase finalmente pude poner los cursores personalizados

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <h3>Projects</h3>
     
     <ol>
-        <li><a href="https://placekitten.com/700/500" target="_blank">Kitty 1</a></li>
-        <li><a href="https://placekitten.com/1080/1080" target="_blank">Kitty 2</a></li>
+        <li><a class="links" href="https://placekitten.com/700/500" target="_blank">Kitty 1</a></li>
+        <li><a class="links" href="https://placekitten.com/1080/1080" target="_blank">Kitty 2</a></li>
         
     </ol>
     </div>
