--- a/html/Formularios.html
+++ b/html/Formularios.html
@@ -1,30 +1,44 @@
-<form action="" method="get">
-    <label for="nombre-usuario">Nombre:</label>
-    <input type="text" id="nombre-usuario" placeholder="e.j. Juan" required>
-        <!-- regex, expresiones regulares, validacion, pattern="" , https://regexr.com/3e48o -->
-    <br>
-    <label for="apellido-usuario">Apellidos(s):</label>
-    <input type="text" id="apellido-usuario" placeholder="e.j. Perez" required>
-    <br>
-    <label for="email-usuario">Correo electronico:</label>
-    <input type="email" id="email-usuario" placeholder="usuario@dominio.com" required>
-    <br>
-    <label for="contraseña'usuario"> Contraseña:</label>
-    <input type="password" id="contraseña'usuario" placeholder="min 6 caracteres" minlength="6" required>
-    <br>
-    <label for="pizza">Pizza:</label>
-    <input type="checkbox" id="pizza">
-    <label for="pasta">Pasta:</label>
-    <input type="checkbox" id="pasta">
-    <label for="tacos">Tacos:</label>
-    <input type="checkbox" id="tacos">
-    <br>
-    <label for="mes-1">Mes uno</label>
-    <input type="radio" name="seleccion" id="mes-1">
-    <label for="mes-2">Mes dos</label>
-    <input type="radio" name="seleccion" id="mes-2">
-    <label for="mes-3">Mes tres</label>
-    <input type="radio" name="seleccion" id="mes-3">
-   <br>
-   <button type="submit">Registro</button>
-</form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Se una chica magica</title>
+    <link rel="stylesheet" href="./styles/styles.css">
+</head>
+<body>
+    <form action="" method="get">
+        <label for="nombre-usuario">Nombre:</label>
+        <input type="text" id="nombre-usuario" placeholder="e.j. Natalia" required>
+            <!-- regex, expresiones regulares, validacion, pattern="" , https://regexr.com/3e48o -->
+        <br>
+        <label for="apellido-usuario">Apellidos(s):</label>
+        <input type="text" id="apellido-usuario" placeholder="e.j. Aguilar" required>
+        <br>
+        <label for="nickname">Nickname(s):</label>
+        <input type="text" id="apellido-usuario" placeholder="nickname" required>
+        <br>
+        <label for="email-usuario">Correo electronico:</label>
+        <input type="email" id="email-usuario" placeholder="usuario@dominio.com" required>
+        <br>
+        <label for="contraseña'usuario"> Contraseña:</label>
+        <input type="password" id="contraseña'usuario" placeholder="min 6 caracteres" minlength="6" required>
+        <br>
+        <label for="shoujo">Shoujo:</label>
+        <input type="checkbox" id="shoujo">
+        <label for="magical-girl">Magical Girl:</label>
+        <input type="checkbox" id="magical-girl">
+        <label for="josei">Josei:</label>
+        <input type="checkbox" id="josei">
+        <br>
+        <label for="rosa-pastel">Rosa Pastel</label>
+        <input type="radio" name="seleccion" id="rosa-pastel">
+        <label for="azul-pastel">Azul Pastel</label>
+        <input type="radio" name="seleccion" id="azul-pastel">
+        <label for="verde-pastel">Verde Pastel</label>
+        <input type="radio" name="seleccion" id="verde-pastel">
+       <br>
+       <button type="submit">Registro</button>
+    </form>
+</body>
+</html>
